# 2023-hictk-paper

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build-cooler-bench-dockerfile.yml  build-cooler-dockerfile.yml  build-fetch-and-sum-bench-dockerfile.yml  build-hic-tools-dockerfile.yml  build-hic2cool-dockerfile.yml  build-hicrep-dockerfile.yml  build-hictk-bench-dockerfile.yml  build-juicer-tools-dockerfile.yml  build-plotting-dockerfile.yml  build-possum-dockerfile.yml  build-straw-bench-dockerfile.yml  build-utils-dockerfile.yml
benchmarks/: CMakeLists.txt  remove_symlink_loops.sh  run_benchmark_balance.sh  run_benchmark_balance_16c.sh  run_benchmark_cool2hic.sh  run_benchmark_dump_chrom.sh  run_benchmark_dump_gw.sh  run_benchmark_fetch_and_sum.sh  run_benchmark_hic2ool.sh  run_benchmark_hicrep.sh  run_benchmark_load.sh  run_benchmark_possum.sh  run_benchmark_workflow.sh  run_benchmark_zoomify.sh  run_workflow.sh
benchmarks/configs/: base_linux.config  base_macos.config  base_saga.config  benchmark_balance.config  benchmark_balance_16c.config  benchmark_cool2hic.config  benchmark_dump_chrom.config  benchmark_dump_gw.config  benchmark_fetch_and_sum.config  benchmark_hic2cool.config  benchmark_hicrep.config  benchmark_load.config  benchmark_possum.config  benchmark_zoomify.config
benchmarks/fetch_and_sum/: CMakeLists.txt  fetch_and_sum_cooler.py  fetch_and_sum_hictk.cpp  fetch_and_sum_straw.py
benchmarks/fetch_and_sum/include/benchmarks/fetch_and_sum/: cli.hpp  config.hpp
benchmarks/workflows/: benchmark_balance.nf  benchmark_balance_16c.nf  benchmark_cool2hic.nf  benchmark_dump_chrom.nf  benchmark_dump_gw.nf  benchmark_fetch_and_sum.nf  benchmark_hic2cool.nf  benchmark_hicrep.nf  benchmark_load.nf  benchmark_possum.nf  benchmark_zoomify.nf
common/configs/: base_hovig.config  base_macos.config  base_saga.config
containers/: cooler-bench__v1.0.0.Dockerfile  cooler__v0.9.2.Dockerfile  fetch-and-sum-bench__v1.0.0.Dockerfile  hic-tools__v3.30.00.Dockerfile  hic2cool__v0.8.3.Dockerfile  hicrep__v0.2.6.Dockerfile  hictk-bench__v1.0.0.Dockerfile  hictk-bench__v2.0.0.Dockerfile  hictk-bench__v2.0.1.Dockerfile  juicer-tools__v1.22.01.Dockerfile  juicer-tools__v2.20.00.Dockerfile  plotting__v1.0.0.Dockerfile  possum__v0.0.1.Dockerfile  straw-bench__v1.0.0.Dockerfile  utils__v1.0.0.Dockerfile
containers/patches/: straw.sorted.patch
data/: downloads.tsv
preprocessing/: pull_singularity_containers.sh  run_fetch_data.sh  run_preprocess_data.sh  setup_workflow_workdir.sh
preprocessing/configs/: base_hovig.config  fetch_data.config  preprocess_data.config
preprocessing/data/: downloads.tsv
preprocessing/workflows/: preprocess_data.nf
utils/: CMakeLists.txt  conanfile.txt
utils/4dn_pairs_to_txt/: 4dn_pairs_to_txt.cpp  CMakeLists.txt
utils/cmake/: CompilerWarnings.cmake
